[gd_scene load_steps=2 format=3 uid="uid://c8j4kqx8vtm4n"]

[ext_resource type="Script" path="res://scripts/ui/Shop.gd" id="1_k3h8n"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_k3h8n")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="ShopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0

[node name="ShopContainer" type="VBoxContainer" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="GreetingLabel" type="Label" parent="ShopPanel/ShopContainer"]
layout_mode = 2
text = "ðŸ›’ Bem-vindo Ã  minha loja!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerGoldLabel" type="Label" parent="ShopPanel/ShopContainer"]
layout_mode = 2
text = "ðŸ’° Suas moedas: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemsContainer" type="GridContainer" parent="ShopPanel/ShopContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="LeaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
text = "ðŸšª SAIR"